--- a/templates/index.html
+++ b/templates/index.html
@@ -27,6 +27,9 @@
                 
                 .container {
                     max-width: 100%;
+                    padding: 0;
+                    margin: 0;
+                    box-shadow: none;
                 }
                 
                 /* Article styling */
