--- a/templates/index.html
+++ b/templates/index.html
@@ -14,6 +14,7 @@
             
             body {
                 font-family: Georgia, serif;
+                font-size: 14pt;
                 line-height: 1.6;
                 color: #333;
             }
@@ -38,7 +39,7 @@
                 }
                 
                 .article-title {
-                    font-size: 1.5em;
+                    font-size: 1.75em;
                     font-weight: bold;
                     margin-top: 1.5em;
                     margin-bottom: 0.5em;
@@ -103,7 +104,7 @@
                 }
                 
                 .article-title {
-                    font-size: 1.5em;
+                    font-size: 1.75em;
                     font-weight: bold;
                     margin-bottom: 1em;
                     color: #1f2937;
@@ -119,7 +120,7 @@
             }
             
             .toc-title {
-                font-size: 2em;
+                font-size: 2.25em;
                 font-weight: bold;
                 margin-bottom: 1em;
                 color: #1f2937;
@@ -130,7 +131,7 @@
             }
             
             .toc-resource-name {
-                font-size: 1.2em;
+                font-size: 1.4em;
                 font-weight: bold;
                 margin-bottom: 0.5em;
                 color: #374151;
@@ -192,9 +193,9 @@
                 }
             }
             
-            .article-content h1 { font-size: 1.5em; margin-top: 1em; margin-bottom: 0.5em; }
-            .article-content h2 { font-size: 1.3em; margin-top: 1em; margin-bottom: 0.5em; }
-            .article-content h3 { font-size: 1.1em; margin-top: 1em; margin-bottom: 0.5em; }
+            .article-content h1 { font-size: 1.6em; margin-top: 1em; margin-bottom: 0.5em; }
+            .article-content h2 { font-size: 1.4em; margin-top: 1em; margin-bottom: 0.5em; }
+            .article-content h3 { font-size: 1.2em; margin-top: 1em; margin-bottom: 0.5em; }
             .article-content p { margin-bottom: 1em; }
             .article-content ul, .article-content ol { margin-bottom: 1em; padding-left: 2em; }
             .article-content pre { background: #f5f5f5; padding: 1em; border-radius: 4px; overflow-x: auto; }
