chore: add published at date to result document

--- a/templates/index.html
+++ b/templates/index.html
@@ -229,6 +229,9 @@
                         {{if .Link}}
                             <div class="article-source">
                                 Source: <a href="{{.Link}}">{{.Link}}</a>
+                                {{if not .Published.IsZero}}
+                                    <br>Published: {{.Published.UTC.Format "2006-01-02 15:04:05 UTC"}}
+                                {{end}}
                             </div>
                         {{end}}
                         <div class="article-content">{{.Content}}</div>
